--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,2 +1,20 @@
 @import "primereact/resources/themes/lara-dark-purple/theme.css";
 @import "primeicons/primeicons.css";
+
+html,
+body,
+#root {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.p-button {
+    display: flex;
+    justify-content: center;
+
+    .p-button-label {
+        flex: 0;
+    }
+}
