create new board and members list

--- a/frontend/src/components/sidebar/sidebar.module.scss
+++ b/frontend/src/components/sidebar/sidebar.module.scss
@@ -21,3 +21,9 @@
         flex-direction: column;
     }
 }
+
+.sidebarBottom {
+    /* margin-top: auto; */
+    /* padding: 1rem; */
+    border-top: 1px solid var(--surface-border);
+}
