--- a/frontend/src/templates/main-template/main-template.module.scss
+++ b/frontend/src/templates/main-template/main-template.module.scss
@@ -1,17 +1,22 @@
 .page {
-    display: flex;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: 100vh;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     padding: 0.6rem;
     gap: 0.6rem;
+    overflow: hidden;
 }
 
 .mainArea {
-    flex: 1;
     display: flex;
     flex-direction: column;
+    min-height: 0;
 }
 
 .content {
     flex: 1;
+    overflow: hidden;
+    min-height: 0;
 }
