--- a/frontend/src/components/create-board-button/create-board-button.module.scss
+++ b/frontend/src/components/create-board-button/create-board-button.module.scss
@@ -3,7 +3,8 @@
 }
 
 .creatContainer {
-    padding: 1rem 1rem 0rem 1rem;
+    padding: 1rem;
+    border-bottom: 1px solid var(--surface-border);
 }
 
 .fileUpload {
