--- a/frontend/src/pages/board/board.module.scss
+++ b/frontend/src/pages/board/board.module.scss
@@ -43,3 +43,11 @@
     align-items: center;
     gap: 0.5rem;
 }
+
+.boardBannerArea {
+    width: 100%;
+    height: 150px;
+    border-radius: 5px;
+    object-fit: cover;
+    // object-position: top right;
+}
