fix board image

--- a/frontend/src/pages/board/board.module.scss
+++ b/frontend/src/pages/board/board.module.scss
@@ -45,9 +45,9 @@
 }
 
 .boardBannerArea {
+    margin-top: 1rem;
     width: 100%;
-    height: 150px;
+    height: 10rem;
     border-radius: 5px;
     object-fit: cover;
-    // object-position: top right;
 }
